--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -56,6 +56,25 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
         <br><br><strong>Description:</strong> While at Women without Borders, I conducted background research on location-specific policies that would affect the rollout of potential projects and presented my findings to the leadership team. My role as a Research Assistant involved deep dives into policy data, government documents, and international organization reports and the subsequent synthesis of these materials for senior staff. Women without Borders specializes in capacity building and preventing violent extremism, and I supported the Director of Research directly in the development of grant proposals. I also developed content for the launch of the organization’s website in 2018 and updated past catalogues of projects for an audience of online readers.  
        <br><br><strong>Reflection:</strong> My time at Women without Borders awakened me to the importance of critical media literacy. The organization often works with communities affected by violent extremism, and many of its projects directly equip mothers in these areas to serve as the first line of defense against the radicalization of their children. In the 21st century, the radicalization process is primarily carried out through digital tools like social media networks. After seeing this need, I knew that I wanted to be a teacher and develop better ways to teach about using the internet effectively and safely. 
         </p>
+    <table>
+        <caption>Languages Spoken</caption>
+        <thead>
+            <tr>
+                <th>Language</th>
+                <th>Ability Level</th>
+            </tr>
+        </thead>
+        <tbody style="text-align:center;">
+            <tr>
+                <td>English</td>
+                <td>Native</td>
+            </tr>
+            <tr>
+                <td>German</td>
+                <td>Full Professional Proficiency</td>
+            </tr>
+        </tbody>
+    </table>
     <br>
     <br>
     <br>
