--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -3,8 +3,8 @@
 Title: About Page
 Use: Offers background info on Hayden Mueller
 Author: Hayden Mueller
-Developed: 10/3/2021
-Tested: 10/3/2021; Validated using https://validator.w3.org/nu/#textarea 
+Developed: 10/10/2021
+Tested: 10/10/2021; Validated using https://validator.w3.org/nu/#textarea 
 CSS validated using https://jigsaw.w3.org/css-validator/.
 -->
 <html lang="en-US">
@@ -42,7 +42,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                     </ul>
                 </li>
                 <li><a href=reflection.html>Reflection</a></li>
-                <li><a href=#contact.html>Contact</a></li>
+                <li><a href=contact.html>Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -73,7 +73,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                     <li>Phi Beta Kappa Member</li>
                     <li>Won Booker Prize in German Studies for Thesis, <em>Das SS-Helferinnenkorps: Drei Phasen, Drei Frauen</em></li>
                 </ul>
-                <span>Bachelor of Arts in German Studies/Theater & Dance, Trinity College</span>
+                <span>Associate of Science, Northwest State Community College</span>
                 <ul>
                     <li>Graduated concurrently from high school May, 2015</li>
                     <li>4.0 GPA</li>
