--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -3,8 +3,8 @@
 <!-- Title: Home Page
 Use: Introduces users to site
 Author: Hayden Mueller
-Developed: 10/3/2021
-Tested: 10/3/2021; Validated using https://validator.w3.org/nu/#textarea 
+Developed: 10/10/2021
+Tested: 10/10/2021; Validated using https://validator.w3.org/nu/#textarea 
 CSS validated using https://jigsaw.w3.org/css-validator/.
 -->
 <head>
@@ -37,7 +37,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                         </ul>
                     </li>
                     <li><a href=reflection.html>Reflection</a></li>
-                    <li><a href=#contact.html>Contact</a></li>
+                    <li><a href=contact.html>Contact</a></li>
                 </ul>
             </div>
         </nav>
