--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -3,8 +3,8 @@
 <!-- Title: Experience Page
 Use: Displays Hayden's work experience
 Author: Hayden Mueller
-Developed: 10/3/2021
-Tested: 10/3/2021; Validated using https://validator.w3.org/nu/#textarea 
+Developed: 10/10/2021
+Tested: 10/10/2021; Validated using https://validator.w3.org/nu/#textarea 
 CSS validated using https://jigsaw.w3.org/css-validator/.
  -->
 <head>
@@ -13,7 +13,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                <title>Experience</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css"> 
-
+               <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                     </ul>
                 </li>
                 <li><a href=reflection.html>Reflection</a></li>
-                <li><a href=#contact.html>Contact</a></li>
+                <li><a href=contact.html>Contact</a></li>
             </ul>
         </div>
     </nav>
