--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -38,7 +38,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                     </ul>
                 </li>
                 <li><a href=reflection.html>Reflection</a></li>
-                <li><a href=#contact.html>Contact</a></li>
+                <li><a href=contact.html>Contact</a></li>
             </ul>
         </div>
     </nav>    
