--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -53,9 +53,9 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
         <h3 class="about-heading">Background</h3>
     <main class="grid-container">
         <div>
+            <a id="resume" href="Muellerresume.pdf" target="_blank">Resume</a>
             <img class="grid-container-1" src="Mueller-h-headshot.jpg" alt="Hayden's Headshot">
             <br>
-            <a class="grid-container-1" href="Muellerresume.pdf" target="_blank">Resume</a>
         </div>
         <div class="grid-container-2">
             <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. Originally from rural Ohio, I pursued undergraduate studies on the East Coast. While studying abroad in Vienna, Austria, I met my now wife, a Japanese citizen. I originally studied theater and was planning to continue my studies in an MFA program, but in my senior year of undergrad, I completed a research thesis in German Studies that changed my priorities. Studying the education programs created to indoctrinate young German women into the Nazi <em>Schutzstaffel</em>, I became intensely interested in the role curriculum plays in worldview formation. After graduating college in May 2019, we relocated to Tokyo, and I have since rigorously pursued professional development opportunities in the field of education. I am, right now, particularly interested in students' online research skills and ways to refine instruction of effective, cross-discipline research methodologies. I'm committed to continuous development as a pedagogue and global citizen.               
