--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -53,8 +53,9 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             <textarea id="message" name="message" required></textarea><br>
             <input type="submit" value="Submit">   
         </form>
+
+    <footer>
+        <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="email" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
+    </footer>
 </body>
-<footer>
-    <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
-</footer>
 </html>
