--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -86,7 +86,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
     <br>
     <br>
     <footer>
-        <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="email" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
+        <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="mail" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
     </footer> 
 </body>
 </html>
