--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -86,7 +86,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             <br>
             <blockquote>“A golden rule, if you like. Be curious.” – Tim Harford, <em>How to Make the World Add Up: Ten Rules for Thinking Differently About Numbers</em>.</blockquote>
             <footer>
-                <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="email" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
+                <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="mail" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
             </footer>
         </div>
     </main>
