--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -52,7 +52,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
         <p>The About Page is a good place to get started if you are interested in what I have learned and where I have been. You can also find a short video of me there if you would like to put a face to my name. For projects and professional experience, please click the Experience Page link located above. The Teaching Philosophy Page shares more on my pedagogy and practice. If you would like to get in touch, please find my details on the Contact Page. With my work spanning several continents, I want to create a designated space for colleagues and future contacts around the world to reach out. Thank you!</p>
     </main>
     <footer>
-        <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="email" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
+        <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="mail" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
     </footer>
 </body>
 </html>
