--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -48,7 +48,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             <label for="lname">Last name:</label><br>
             <input type="text" id="lname" name="lname" required><br>
             <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email" required><br>
+            <input type="email" id="email" name="email" required><br>
             <label for="message">Message:</label><br>
             <textarea id="message" name="message" required></textarea><br>
             <input type="submit" value="Submit">   
